--- a/app/src/main/res/layout/fragment_launches_detail.xml
+++ b/app/src/main/res/layout/fragment_launches_detail.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.upcoming_launches.UpcomingLaunchesDetailFragment">
+        tools:context=".ui.launches.LaunchesDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
