--- a/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
+++ b/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
@@ -1,61 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_sorting_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sort by:"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:text="@string/sort_by"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/horizontalDividerBackground"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:background="@color/horizontalDividerBackground" />
 
     <RadioGroup
         android:id="@+id/radio_group_sorting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical">
+
         <RadioButton
-            android:id="@+id/first"
+            android:id="@+id/radio_button_serial_newest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Capsule serial: newest"/>
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/capsule_serial_newest" />
+
         <RadioButton
-            android:id="@+id/second"
+            android:id="@+id/radio_button_serial_oldest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Capsule serial: oldest"/>
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/capsule_serial_oldest" />
     </RadioGroup>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_sorting_serial_newest"
-        style="@style/AppTextButton.Icon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Capsule serial: newest"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_sorting_serial_oldest"
-        style="@style/AppTextButton.Icon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Capsule serial: oldest"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
 
 </LinearLayout>
