--- a/app/src/main/res/layout/fragment_cores_recycler.xml
+++ b/app/src/main/res/layout/fragment_cores_recycler.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Serial: newest"/>
+        android:text="@string/serial_newest"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
