--- a/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
+++ b/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
@@ -18,13 +18,16 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/horizontalDividerBackground" />
 
     <RadioGroup
         android:id="@+id/radio_group_sorting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
