--- a/app/src/main/res/layout/fragment_recycler_sorting.xml
+++ b/app/src/main/res/layout/fragment_recycler_sorting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        app:icon="@drawable/ic_sort_24dp"
+        app:iconTint="@color/colorSecondary"
         android:text="@string/serial_newest"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
