--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,7 @@
         <item name="backgroundTint">?attr/colorSecondary</item>
     </style>
 
-    <style name="AppTextButton.Icon" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="AppTextButton.Icon" parent="Widget.MaterialComponents.Button.TextButton.Icon">
         <item name="android:textColor">@color/colorSecondary</item>
         <item name="android:textAllCaps">false</item>
     </style>
