--- a/app/src/main/res/layout/bottom_sheet_capsules_sorting.xml
+++ b/app/src/main/res/layout/bottom_sheet_capsules_sorting.xml
@@ -12,14 +12,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/sort_by"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:textColor="@color/colorOnSurface" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@color/horizontalDividerBackground" />
 
@@ -27,8 +28,8 @@
         android:id="@+id/radio_group_sorting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:orientation="vertical">
@@ -38,14 +39,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/capsule_serial_newest" />
+            android:text="@string/capsule_serial_newest"
+            android:textColor="@color/colorOnSurface" />
 
         <RadioButton
             android:id="@+id/radio_button_serial_oldest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/capsule_serial_oldest" />
+            android:text="@string/capsule_serial_oldest"
+            android:textColor="@color/colorOnSurface" />
     </RadioGroup>
 
 </LinearLayout>
