Add actual numbers of Launches, Cores and Capsules to dashboard

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -97,4 +97,9 @@
         android:id="@+id/launch_pads_dest"
         android:name="io.github.omisie11.spacexfollower.ui.launch_pads.LaunchPadsFragment"
         android:label="@string/label_launch_pads" />
+    <fragment
+        android:id="@+id/dashboard_dest"
+        android:name="io.github.omisie11.spacexfollower.ui.dashboard.DashboardFragment"
+        android:label="@string/label_dashboard"
+        tools:layout="@layout/fragment_dashboard" />
 </navigation>
