--- a/app/src/main/res/menu/menu_nav_view.xml
+++ b/app/src/main/res/menu/menu_nav_view.xml
@@ -22,6 +22,11 @@
         android:title="@string/label_launch_pads" />
 
     <item
+        android:id="@+id/dashboard_dest"
+        android:checkable="true"
+        android:title="@string/label_dashboard" />
+
+    <item
         android:id="@id/company_dest"
         android:checkable="true"
         android:title="@string/label_company" />
