--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,6 +10,7 @@
         android:id="@+id/launches_chart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="240dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
