--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,13 @@
 
     <color name="horizontalDividerBackground">#dadce0</color>
 
+    <!-- Colors used as a pallette for pie chart -->
+    <color name="pie_chart_color_1">#ba68c8</color>
+    <color name="pie_chart_color_2">#4dd0e1</color>
+    <color name="pie_chart_color_3">#66bb6a</color>
+    <color name="pie_chart_color_4">#ffb74d</color>
+    <color name="pie_chart_color_5">#e57373</color>
+
+    <color name="pie_chart_text_color">#212121</color>
+
 </resources>
