--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -24,12 +24,12 @@
 
     <color name="horizontalDividerBackground">#5f6368</color>
 
-    <!-- Colors used as a pallette for pie chart -->
-    <color name="pie_chart_color_1">#b39ddb</color>
-    <color name="pie_chart_color_2">#80deea</color>
-    <color name="pie_chart_color_3">#a5d6a7</color>
-    <color name="pie_chart_color_4">#ffcc80</color>
-    <color name="pie_chart_color_5">#ef9a9a</color>
+    <!-- Colors used as a palette for pie chart -->
+    <color name="pie_chart_color_1">#80b39ddb</color>
+    <color name="pie_chart_color_2">#8080deea</color>
+    <color name="pie_chart_color_3">#80a5d6a7</color>
+    <color name="pie_chart_color_4">#80ffcc80</color>
+    <color name="pie_chart_color_5">#80ef9a9a</color>
     
     <color name="pie_chart_text_color">#000000</color>
 
