--- a/app/src/main/res/layout/launch_pads_recycler_item.xml
+++ b/app/src/main/res/layout/launch_pads_recycler_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,20 +13,22 @@
         android:id="@+id/image_location_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_location_pin_24dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/content_desc_image_location_pin"
+        android:src="@drawable/ic_location_pin_24dp" />
 
     <TextView
         android:id="@+id/text_launch_pad_location_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@id/image_location_pin"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_toStartOf="@id/image_expand"
+        android:layout_toEndOf="@id/image_location_pin"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
         tools:text="Vandenberg Air Force Base" />
 
@@ -34,51 +37,118 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_launch_pad_location_name"
-        android:layout_toEndOf="@id/image_location_pin"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_toEndOf="@id/image_location_pin"
         tools:text="California" />
 
     <ImageView
-        android:id="@+id/image_expand_collapse"
+        android:id="@+id/image_expand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_expand_more_24dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/content_desc_image_expand_collapse"
+        android:src="@drawable/ic_expand_more_24dp" />
 
-    <LinearLayout
-        android:id="@+id/linear_expandable_part"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_expandable_part"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_launch_pad_region"
-        android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="vertical">
+        android:layout_marginEnd="16dp">
+
+        <TextView
+            android:id="@+id/textView40"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/status"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_launch_pad_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+            app:layout_constraintEnd_toEndOf="@+id/textView40"
+            app:layout_constraintStart_toStartOf="@+id/textView40"
+            app:layout_constraintTop_toBottomOf="@+id/textView40"
+            tools:text="ACTIVE" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/successful_launches"
+            app:layout_constraintEnd_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/attempted_launches"
+            app:layout_constraintEnd_toStartOf="@+id/text_attempted_launches"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_launch_pad_status" />
 
         <TextView
             android:id="@+id/text_attempted_launches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Attempted launches: 12"/>
+            android:layout_marginEnd="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/textView3"
+            tools:text="12" />
 
         <TextView
             android:id="@+id/text_successful_launches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            tools:text="Successful launches: 12"/>
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="@+id/text_attempted_launches"
+            app:layout_constraintStart_toStartOf="@+id/text_attempted_launches"
+            app:layout_constraintTop_toTopOf="@+id/textView2"
+            tools:text="10" />
 
         <TextView
             android:id="@+id/text_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Details about launch pad"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            tools:text="Details about launch pad" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
 
