--- a/app/src/main/res/layout/bottom_sheet_capsules_sorting.xml
+++ b/app/src/main/res/layout/bottom_sheet_capsules_sorting.xml
@@ -36,7 +36,7 @@
 
         <RadioButton
             android:id="@+id/radio_button_serial_newest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
             android:text="@string/capsule_serial_newest"
@@ -44,10 +44,26 @@
 
         <RadioButton
             android:id="@+id/radio_button_serial_oldest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
             android:text="@string/capsule_serial_oldest"
+            android:textColor="@color/colorOnSurface" />
+
+        <RadioButton
+            android:id="@+id/radio_button_status_asc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/capsule_status_active_first"
+            android:textColor="@color/colorOnSurface" />
+
+        <RadioButton
+            android:id="@+id/radio_button_status_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/capsule_status_active_last"
             android:textColor="@color/colorOnSurface" />
     </RadioGroup>
 
