--- a/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
+++ b/app/src/main/res/layout/bottom_sheet_cores_sorting.xml
@@ -36,34 +36,50 @@
 
         <RadioButton
             android:id="@+id/radio_button_serial_newest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/core_serial_newest"
+            android:text="@string/serial_newest"
             android:textColor="@color/colorOnSurface" />
 
         <RadioButton
             android:id="@+id/radio_button_serial_oldest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/core_serial_oldest"
+            android:text="@string/serial_oldest"
             android:textColor="@color/colorOnSurface" />
 
         <RadioButton
             android:id="@+id/radio_button_block_asc"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/core_block_ascending"
+            android:text="@string/block_ascending"
             android:textColor="@color/colorOnSurface" />
 
         <RadioButton
             android:id="@+id/radio_button_block_desc"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorSecondary"
-            android:text="@string/core_block_descending"
+            android:text="@string/block_descending"
+            android:textColor="@color/colorOnSurface" />
+
+        <RadioButton
+            android:id="@+id/radio_button_status_asc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/status_active_first"
+            android:textColor="@color/colorOnSurface" />
+
+        <RadioButton
+            android:id="@+id/radio_button_status_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorSecondary"
+            android:text="@string/status_active_last"
             android:textColor="@color/colorOnSurface" />
     </RadioGroup>
 
