--- a/app/src/main/res/layout/launches_recycler_item.xml
+++ b/app/src/main/res/layout/launches_recycler_item.xml
@@ -50,6 +50,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:contentDescription="@string/image_with_mission_patch" />
+        android:contentDescription="@string/image_with_mission_patch"
+        android:scaleType="fitCenter"/>
 
 </RelativeLayout>
